--- a/src/ikl.web/Client/Pages/Index.razor
+++ b/src/ikl.web/Client/Pages/Index.razor
@@ -1,4 +1,8 @@
 ﻿@page "/"
+@using ikl.web.Shared
+@using ikl.web.Client.Pages;
+
+@inject DataService DataService
 
 <h1>Velkommen</h1>
 
@@ -13,12 +17,7 @@
     i USA, Europa og Japan.
 
 </p>
-Møbeldesigner Ib Kofod-Larsen blev født i 1921, og havde en baggrund som arkitekt og snedker, hvor han tidligere havde studeret ved Det Kongelige Akademi i København.
 
-Rene skulpturelle linjer er ofte det mest kendetegnende ved Ib Kofod-Larsens værker. Ofte arbejdede Ib i forskellige fine træsorter – blandt andet teak og palisander, som var kombineret med ægte læder.
-
-Den danske virksomhed Faarup Møbelfabrik, fik hurtigt øjnene op for Ib Kofod-Larsens talent. Her designede Ib Kofod-Larsen nogle af hans smukkeste værker, blandt andet Model FA-66 i palisander. Men Ib Kofod-Larsen var gennem hans karriere også tilknyttet andre førende møbelproducenter. Herunder Carlo Gahrn, Christensen & Larsen, Bovenkamp, ​​Petersens og Fredericia Furniture.
-
-En anden kendt og elsket møbel som i høj grad er værd at nævne, er den lave brede loungestol Model 107. Stolen som blev designet i 1950érne, afspejler det originale og klassiske design, som kendetegnede Danish Modern æraen. Danish Modern var perioden mellem 1920érne og op til 1970érne, hvor mange danske designmøbler og designgenstande blev tegnet.
-
-Model 107 blev skabt i Ib Kofod-Larsens ånd og design tilgang, og er i dag blevet relanceret i forskellige træsorter såsom egetræ, valnød, teak og læder.
+@code{
+    
+}
