--- a/src/ikl.web/Client/Pages/Drawings.razor
+++ b/src/ikl.web/Client/Pages/Drawings.razor
@@ -1,29 +1,56 @@
 @page "/drawings/{CustomerId}"
 @using ikl.web.Shared
-@using BlazorStrap;
 @inject DataService DataService
 
-<BSCard CardType="CardType.Columns">
+<h2>@(Customer != null ? string.Join(",", Customer.Names) : "")</h2>
+<div class="card-columns">
     @foreach (var item in _drawings)
     {
-        <BSCard>
-            <BSCard CardType="CardType.Image" VerticalAlignment="VerticalAlignment.Top" src="@("https://ibkofodlarsen.blob.core.windows.net/thumbnails/" + item.Path)" alt="@(Customer.Names[0] + " - " + item.Title)" />
-            <BSCard CardType="CardType.Body">
-                <BSCard CardType="CardType.Title">@item.Title</BSCard>
-                <BSCard CardType="CardType.Subtitle">Ratios: @string.Join(",", item.Ratios)</BSCard>
-                <BSCard CardType="CardType.Text">Tags: @string.Join(",", item.Tags)</BSCard>
-            </BSCard>
-        </BSCard>
+        <div class="card">
+            <!-- set a width on the image otherwise it will expand to full width       -->
+            <img class="card-img-top img-fluid" src="@("https://ibkofodlarsen.blob.core.windows.net/thumbnails/" + item.Path)" alt="@(Customer.Names[0] + " - " + item.Title)">
+            <div class="card-body">
+                <h4 class="card-title">@item.Title</h4>
+                <p class="card-text">Ratios: @string.Join(",", item.Ratios)</p>
+            </div>
+            <div class="card-footer">
+                Tags: @string.Join(",", item.Tags)
+            </div>
+        </div>
     }
-</BSCard>
+</div>
+<style>
+    @@media (min-width: 576px) {
+    .card-columns {
+        column-count: 2;
+    }
+}
 
+@@media (min-width: 768px) {
+    .card-columns {
+        column-count: 3;
+    }
+}
+
+@@media (min-width: 992px) {
+    .card-columns {
+        column-count: 4;
+    }
+}
+
+@@media (min-width: 1200px) {
+    .card-columns {
+        column-count: 5;
+    }
+}
+</style>
     @code{
 
         private string _customerId;
         [Parameter]
         public string CustomerId
         {
-            get => _customerId; 
+            get => _customerId;
             set
             {
                 _customerId = value;
