--- a/src/ikl.web/Client/Shared/MainLayout.razor.css
+++ b/src/ikl.web/Client/Shared/MainLayout.razor.css
@@ -9,7 +9,7 @@
 }
 
 .sidebar {
-    background-image: linear-gradient(180deg, rgb(5, 39, 103) 0%, #3a0647 70%);
+    background-color: gray;
 }
 
 .top-row {
@@ -52,7 +52,6 @@
 
     .sidebar {
         width: 250px;
-        height: 100vh;
         position: sticky;
         top: 0;
     }
