--- a/src/ikl.web/Client/Shared/NavMenu.razor
+++ b/src/ikl.web/Client/Shared/NavMenu.razor
@@ -1,5 +1,8 @@
 ﻿@using ikl.web.Shared;
+@using System.Threading
 @inject DataService DataService
+@inject NavigationManager NavigationManager
+
 <div class="top-row pl-4 navbar navbar-dark">
     <a class="navbar-brand" href="">ikl.web</a>
     <button class="navbar-toggler" @onclick="ToggleNavMenu">
@@ -8,44 +11,56 @@
 </div>
 
 <div class="@NavMenuCssClass" @onclick="ToggleNavMenu">
-    <ul class="nav flex-column">
+    <ul class="nav flex-column container">
+        
         <li class="nav-item px-3">
             <NavLink class="nav-link" href="" Match="NavLinkMatch.All">
                 <span class="oi oi-home" aria-hidden="true"></span> Home
             </NavLink>
         </li>
-        @foreach (var item in _customers)
+
+        <li class="nav-item px-3">
+            <button type="button" class="btn btn-secondary" @onclick="Search">Search</button>
+            <input type="text" class="form-control" placeholder="Search all drawings..." @oninput="e => _text = e.Value?.ToString()">
+        </li>
+        
+        @foreach (var item in DataService.GetCustomers())
         {
-            var link = "drawings/" + item.Id;
+            var drawings = DataService.GetDrawings(item.Id);
+            // if no drawings, dont add nav item
+            if(!drawings.Any()) continue;
+            var link = "drawings?customerId=" + item.Id;
             <li class="nav-item px-3">
                 <NavLink class="nav-link" href="@link">
-                   @string.Join(",", item.Names)
+                    <span style="text-overflow: ellipsis;">@item.Names[0]</span>
                 </NavLink>
             </li>
         }
     </ul>
 </div>
-
+<style>
+.container {
+    height: 100vh;
+    /*width: 30vw;*/
+    overflow: auto;
+    display: inline-block;
+}
+</style>
 @code {
     private bool collapseNavMenu = true;
 
     private string NavMenuCssClass => collapseNavMenu ? "collapse" : null;
-    private Customer[] _customers = new Customer[0];
-    private Data _data;
-    protected override async Task OnParametersSetAsync()
-    {
-
-        _data = await DataService.GetData();
-        _customers = _data.Customers;
-    }
-    protected override async Task OnInitializedAsync()
-    {
-        //_data = await DataService.GetData();
-        await base.OnInitializedAsync();
-    }
 
     private void ToggleNavMenu()
     {
         collapseNavMenu = !collapseNavMenu;
+    }
+
+    private string _text = null;
+
+    private void Search()
+    {
+        var link = "drawings?text=" + _text;
+        NavigationManager.NavigateTo(link);
     }
 }
