Updated UI, add signature logo, favicon updated text and forntpage picture

--- a/src/ikl.web/Client/Pages/Index.razor
+++ b/src/ikl.web/Client/Pages/Index.razor
@@ -3,20 +3,47 @@
 @using ikl.web.Client.Pages;
 
 @inject DataService DataService
+<style>
+    h1 { text-align: center;}
+</style>
+<div style="padding: 20px; margin-bottom: 20px;">
+    <h1><img src="./ib_kofod-larsen_sig_sm.png" alt="Ib Kofod Larsen" style="opacity: 0.75; height: 64px;" /></h1>
+    <div>
+        <div style="display: flex; justify-content: center; align-items: center;">
+            <img src="./Ib-Kofod-Larsen-Billede-Designer-3.jpg" alt="Ib Kofod Larsen" style="width: 90%; margin-bottom: 20px" />
+            @* <img src="https://media.fds.fi/designer/300/ib-kofod-larsen_designer.jpg" alt="Ib Kofod Larsen"/> *@
+            @* <img src="https://media.fds.fi/designer/300/ib-kofod-larsen_designer.jpg" alt="Ib Kofod Larsen"/> *@
+        </div>
+        <div>
+                Ib Kofod-Larsen was born in 1921 in Denmark. Kofod-Larsen was trained as a cabinetmaker with the highest honours in 1944, and later completed his education as an architect from the Royal Danish Academy of Fine Arts in 1948. 
+                <br /><br />
+                His first recognition as a designer came when he won the Holmegaard Glass Competition and received the Danish Cabinetmakers Guild’s annual award. These awards attracted the attention of the Danish furniture manufacturer Faarup Møbelfabrik. During his time at Faarup, he created some of his most beautiful works, like the rosewood Model 66 sideboard, and established himself as a furniture designer. 
+                <br /><br />
+                 Ib Kofod-Larsen belongs to the same period of Danish furniture design as several of the country's most notable designers. His works are clearly inspired by Scandinavian Modernism, and his pieces follow the basic outsets of Danish mid-century design, creating versatile, practical pieces with a graceful, minimalist aesthetic. Kofod-Larsen used natural grains and patterns in raw materials making these elements the focus of his designs. His works have the constant use of elegant woods, such as teak and rosewood, together with leather which results in a clean layout with sculptural lines. 
+                <br /><br />
+                He had an experimental approach to furniture and as a result Dansk Glasfiber Industri hired him in 1953 to cooperate in developing heat-hardened polyester as part of the design of new furniture types. He focused mainly on furniture, but also designed radio and television cabinets, silver, glass, fabrics, textiles, curtains, wallpaper and industrial design.  
+                 <br /><br />
+                Even though he realized his first success as a designer at home, Kofod-Larsen didn’t receive as much recognition there as his contemporaries. He moved away from Denmark early in his career and won great recognition outside of his home country, especially in Sweden, the UK and the US where Ib Kofod-Larsen was and still remains a big name. His overseas recognition led to a partnership in the year 1962 with British furniture manufacturer High Wycombe. He also designed furniture for several other leading midcentury manufacturers, both at home and abroad, Christensen & Larsen, Carlo Gahrn, Bovenkamp, Petersens, and Fredericia Furniture. Amidst the most singular examples of Ib Kofod-Larsen's furniture designs are the ‘beautiful and elegant ‘Seal’ chair and the versatile and classic ‘Penguin’ chair manufactured by Brdr. Petersen.  
+                <br /><br />
+                Ib Kofod-Larsen died in 2003, but his designs persists, both as vintage collectibles and reproduction. 
 
-<h1>Velkommen</h1>
+        </div>
+    </div>
+    
+    
 
-<img src="https://media.fds.fi/designer/300/ib-kofod-larsen_designer.jpg">
+</div>
 
-<p>
-    Ib Kofod-Larsen (1921-2003) var en af pionererne for det danske moderne i 1950'erne.
-    Kofod-Larsen modtog sin arkitektgrad fra Det Kongelige Danske Akademi, og han arbejdede også som designer -
-    et af hans mest kendte værker er strikkestolen fra 1951.
-    I stedet for et regionalt fænomen så Kofod-Larsen skandinavisk design som en del af international modernisme,
-    og han blev en af de bedst sælgende danske arkitekter i USA i 1950'erne. Han samarbejdede også med mange møbelproducenter
-    i USA, Europa og Japan.
 
-</p>
+@* <p> *@
+@*     Ib Kofod-Larsen (1921-2003) var en af pionererne for det danske moderne i 1950'erne. *@
+@*     Kofod-Larsen modtog sin arkitektgrad fra Det Kongelige Danske Akademi, og han arbejdede også som designer - *@
+@*     et af hans mest kendte værker er strikkestolen fra 1951. *@
+@*     I stedet for et regionalt fænomen så Kofod-Larsen skandinavisk design som en del af international modernisme, *@
+@*     og han blev en af de bedst sælgende danske arkitekter i USA i 1950'erne. Han samarbejdede også med mange møbelproducenter *@
+@*     i USA, Europa og Japan. *@
+@* *@
+@* </p> *@
 
 @code{
     
