--- a/src/ikl.web/Client/Shared/MainLayout.razor
+++ b/src/ikl.web/Client/Shared/MainLayout.razor
@@ -1,5 +1,6 @@
 ﻿@using ikl.web.Shared
 @inherits LayoutComponentBase
+@inject IMatDialogService MatDialogService
 
 <style>
     .mdc-top-app-bar {
@@ -21,8 +22,8 @@
                 <a href="/" style="margin-left: 10px;"><img src="./icon-192.png" style="height: 48px" alt="" /> <img src="./ib_kofod-larsen_maa_sig_sm.png" style="height: 32px" alt="" /></a>
             </MatAppBarSection>
             <MatAppBarSection>
-                @* <MatIconButton Icon="search" Link="/search"></MatIconButton> *@
-                @* <MatAppBarTitle Style="width: 100%"><</MatAppBarTitle> *@
+                <MatButton Icon="search" OnClick="() => MatDialogService.OpenAsync(typeof(SearchDialog), null)" Label="Search"></MatButton>
+                @* <MatIconButton Icon="search" OnClick="() => MatDialogService.OpenAsync(typeof(SearchDialog), null)"></MatIconButton> *@
             </MatAppBarSection>
             <MatAppBarSection Align="@MatAppBarSectionAlign.End">
                 <MatHidden Breakpoint="@MatBreakpoint.MD" Direction="@MatHiddenDirection.Up">
