fix img modal width and info on ikl

--- a/src/ikl.web/Client/Shared/DrawingCard.razor
+++ b/src/ikl.web/Client/Shared/DrawingCard.razor
@@ -101,7 +101,7 @@
                 {"DrawingId", drawingId},
                 { "Title", title}
             },
-            SurfaceStyle = "min-width: 1024px;"
+            SurfaceStyle = "min-width: 50vw; max-width: 90vw;"
         });
     }
 
