--- a/src/ikl.web/Client/Pages/Drawings.razor
+++ b/src/ikl.web/Client/Pages/Drawings.razor
@@ -19,7 +19,7 @@
 .cards {
  width: 100%;
 display: grid;
-grid-template-columns: repeat(3, 1fr);
+grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
 grid-auto-rows: auto;
 grid-gap: 1rem;
  
