--- a/src/ikl.web/Client/Shared/FilterMenu.razor
+++ b/src/ikl.web/Client/Shared/FilterMenu.razor
@@ -1,12 +1,12 @@
 ﻿
 @inject DataService DataService
 
-  @foreach (var customer in DataService.GetCustomers())
+  @foreach (var customer in DataService.GetCustomers().OrderBy(c => c.Year))
   {
       var drawings = DataService.GetDrawings(customer.Id);
       // if no drawings, dont add nav item
       if (!drawings.Any()) continue;
       var link = "drawings?customerId=" + customer.Id;
         
-      <MatNavItem Href="@link" Class="hoverList">@customer.Names[0]</MatNavItem>
+      <MatNavItem Href="@link" Class="hoverList">@(customer.Year + " - " + customer.Names[0])</MatNavItem>
   }
